NODE-1085 Update Configuration part and readme section